fix: scrollbar gutter for html

--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -1,6 +1,7 @@
 html {
   height: 100%;
   font-size: 16px;
+  scrollbar-gutter: stable;
 }
 
 body {
